fix grid commit module 3

--- a/module3/css/styles.css
+++ b/module3/css/styles.css
@@ -42,9 +42,14 @@ body {
   line-height: .5;
 }
 
-.container .jumbotron  {
-  
+.row {
+width: 100%;
+
+}
+.col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   background-color: #E0E0E0;
-  margin:10px;
+  margin:15px;
   padding: 10px;
+  text-align: justify;
+
 }
